--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^2.3.1",
     "express": "^4.12.3",
     "mongoose": "^4.0.1",
+    "newrelic": "^1.18.3",
     "twilio": "^2.0.0",
     "xml": "^1.0.0",
     "xml2js": "^0.4.6"
