--- a/package.json
+++ b/package.json
@@ -1,21 +1,30 @@
 {
-  "name": "confessions",
+  "name": "only-god-forgives",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Mike Mitchell",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.12.3",
     "ejs": "^2.3.1",
     "express": "^4.12.3",
     "mongoose": "^4.0.1",
-    "newrelic": "^1.18.3",
-    "twilio": "^2.0.0",
-    "xml": "^1.0.0",
-    "xml2js": "^0.4.6"
+    "twilio": "^2.0.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.8.11",
+    "gulp-coffee": "^2.3.1",
+    "gulp-concat": "^2.5.2",
+    "gulp-imagemin": "^2.2.1",
+    "gulp-livereload": "^3.8.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.0.0",
+    "gulp-ruby-sass": "^1.0.1",
+    "gulp-svgmin": "^1.1.2",
+    "gulp-watch": "^4.2.4"
   }
 }
